--- a/management/css/style.css
+++ b/management/css/style.css
@@ -57,7 +57,7 @@ a:focus {color:#94a9be;outline: none;}
 a.smallLink {
 	font-size: 12px;
 	text-decoration: none;
-	color: #1B76A9;
+	color: #1B76A9 !important;
 }
 
 span.smallText{font-size:90%;}
@@ -672,6 +672,7 @@ a#logout:hover {
 
 .noBorder > tbody > tr > td:nth-child(1) {
 	width: 100px !important;
+	padding-bottom: 5px;
 }
 
 a.newSearch:hover {
@@ -2059,6 +2060,10 @@ a.addLink{
 
 }
 
-a {
-	font-weight:normal;
+/*---  links in black ---*/
+
+a{
+	color: black !important;
+	font-weight: normal;
+	text-decoration: underline;
 }
